--- a/admin/views/groups/create.jade
+++ b/admin/views/groups/create.jade
@@ -11,11 +11,11 @@ block content
       .form-group
         label.control-label.col-sm-2 Tag
         .col-sm-10
-          input.form-control(type='text', name='tag', placeholder='Group Tag')
+          input.form-control(type='text', name='tag', placeholder='Group Tag, leave blank for auto')
       .form-group
         label.control-label.col-sm-2 Label
         .col-sm-10
-          input.form-control(type='text', name='label', placeholder='Group Label')
+          input.form-control(type='text', name='label', placeholder='Group Label, leave blank for auto')
       .form-group
         .col-sm-offset-2.col-sm-10
           button.btn.btn-success(type='submit') Save
