closes #6 not sure if we need null as the default on pingData i just changed it to 0 for now

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -21,9 +21,9 @@ block content
               span.glyphicon.glyphicon-link
             th Location
             th IP
-            th Min
-            th Max
-            th Avg
-            th Loss
+            th Min (ms)
+            th Max (ms)
+            th Avg (ms)
+            th Loss (%)
             th Options
         tbody#resultBody
