--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -46,6 +46,7 @@ html
     script(src='//code.jquery.com/jquery-1.11.1.min.js')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/socket.io/socket.io.js')
+    script(src='/bower_components/handlebars/handlebars.min.js')
     script.
       var socket = io.connect()
     //piwik
