Repair pulsar activities so they work properly again (add nasty comments); Patch jade so that the row actually gets an id

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -14,7 +14,7 @@ append js
         <th>Options</th>
       </tr>
       {{#each pingResults}}
-        <tr id='{{data.id}}'>
+        <tr id='{{this.id}}'>
           <td class='pulsar'>
             <span class='glyphicon glyphicon-heart text-danger' />
           </td>
