converted to bowercdn

--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -5,9 +5,9 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     block css
-      link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/normalize.css')
-      link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/main.css')
-      link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+      link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/normalize.css')
+      link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/main.css')
+      link(rel='stylesheet', href='//bowercdn.net/c/bootstrap-3.2.0/dist/css/bootstrap.min.css')
       link(rel='stylesheet', href='/css/layout.css')
     title Ping.ms Admin
   body
@@ -38,5 +38,7 @@ html
       small(style='font-size: 9px;') &copy; Ping.ms. Version #{version}
     //load scripts
     block js
-      script(src='/bower_components/jquery/dist/jquery.min.js')
-      script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
+      script(src='//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js')
+      script(src='//bowercdn.net/c/bootstrap-3.2.0/dist/js/bootstrap.min.js')
+      script(src='//bowercdn.net/c/bootstrap-multiselect-0.9.4/js/bootstrap-multiselect.js')
+      script(src='//bowercdn.net/c/pGenerator-1.0.2/pGenerator.jquery.js')
