--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -9,9 +9,9 @@ html
       meta(name='keywords', content='ping test, ping, traceroute, reverse traceroute, online ping, remote ping, server, web site, website speed, network speed, traceroutes, ping website')
       meta(name='description', content='ping.ms offers free online ping and free online traceroute service with multiple locations worldwide.')
     block css
-      link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/normalize.css')
-      link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/main.css')
-      link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+      link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/normalize.css')
+      link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/main.css')
+      link(rel='stylesheet', href='//bowercdn.net/c/bootstrap-3.2.0/dist/css/bootstrap.min.css')
       link(rel='stylesheet', href='/css/style.css')
     link(rel='shortcut icon', href='/favicon.ico', sizes='16x16')
     link(rel='icon', href='/favicon.ico', sizes='16x16')
@@ -43,10 +43,10 @@ html
         //a(href='http://en.wikipedia.org/wiki/Traceroute') What is Traceroute?
   //load scripts
   block js
-    script(src='//code.jquery.com/jquery-1.11.1.min.js')
-    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+    script(src='//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js')
+    script(src='//bowercdn.net/c/bootstrap-3.2.0/dist/js/bootstrap.min.js')
     script(src='/socket.io/socket.io.js')
-    script(src='/bower_components/handlebars/handlebars.min.js')
+    script(src='//bowercdn.net/c/handlebars-1.3.0/handlebars.min.js')
     script.
       var socket = io.connect()
     //piwik
