--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -8,6 +8,7 @@ html
       meta(property='og:site_name', content='Ping.ms')
       meta(name='keywords', content='ping test, ping, traceroute, reverse traceroute, online ping, remote ping, server, web site, website speed, network speed, traceroutes, ping website')
       meta(name='description', content='ping.ms offers free online ping and free online traceroute service with multiple locations worldwide.')
+    title #{pageTitle || 'Ping.ms'}
     block css
       link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/normalize.css')
       link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/main.css')
@@ -17,7 +18,6 @@ html
     link(rel='icon', href='/favicon.ico', sizes='16x16')
     link(rel='icon', href='/favicon128.ico', sizes='128x128')
     link(rel='icon', href='/images/pingms-icon.png', sizes='318x317', type='image/png')
-  title #{pageTitle || 'Ping.ms'}
   body
     #header
       #title
@@ -41,33 +41,33 @@ html
         a(href='/bots') Bot List
         //a(href='http://en.wikipedia.org/wiki/Ping_(networking_utility)') What is Ping?
         //a(href='http://en.wikipedia.org/wiki/Traceroute') What is Traceroute?
-  //load scripts
-  block js
-    script(src='//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js')
-    script(src='//bowercdn.net/c/bootstrap-3.2.0/dist/js/bootstrap.min.js')
-    script(src='/socket.io/socket.io.js')
-    script(src='//bowercdn.net/c/handlebars-1.3.0/handlebars.min.js')
-    script.
-      var socket = io.connect()
-    //piwik
-    script.
-      var _paq = _paq || [];
-      _paq.push(['trackPageView']);
-      _paq.push(['enableLinkTracking']);
-      (function() {
-        var u=(("https:" == document.location.protocol) ? "https" : "http") + "://stats.esited.com/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', 2]);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-        g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-      })();
-    //end piwik
-    //google analytics
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-52059391-1', 'ping.ms');
-      ga('send', 'pageview');
-    //end google analytics
+    //load scripts
+    block js
+      script(src='//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js' type='text/javascript')
+      script(src='//bowercdn.net/c/bootstrap-3.2.0/dist/js/bootstrap.min.js')
+      script(src='/socket.io/socket.io.js')
+      script(src='//bowercdn.net/c/handlebars-1.3.0/handlebars.min.js')
+      script.
+        var socket = io.connect()
+      //piwik
+      script.
+        var _paq = _paq || [];
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function() {
+          var u=(("https:" == document.location.protocol) ? "https" : "http") + "://stats.esited.com/";
+          _paq.push(['setTrackerUrl', u+'piwik.php']);
+          _paq.push(['setSiteId', 2]);
+          var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
+          g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+        })();
+      //end piwik
+      //google analytics
+      script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+              ga('create', 'UA-52059391-1', 'ping.ms');
+        ga('send', 'pageview');
+      //end google analytics
