--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -43,10 +43,9 @@ html
         //a(href='http://en.wikipedia.org/wiki/Traceroute') What is Traceroute?
     //load scripts
     block js
-      script(src='//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js' type='text/javascript')
+      script(src='//bowercdn.net/c/jquery-1.11.1/dist/jquery.min.js')
       script(src='//bowercdn.net/c/bootstrap-3.2.0/dist/js/bootstrap.min.js')
       script(src='/socket.io/socket.io.js')
-      script(src='//bowercdn.net/c/handlebars-1.3.0/handlebars.min.js')
       script.
         var socket = io.connect()
       //piwik
