--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -39,29 +39,4 @@ block content
             td.max -
             td.avg -
             td.loss -
-            td.traceLink
-              a(href="#") Traceroute
-          tr#test234235
-            td.pulsar
-              span.glyphicon.glyphicon-link.text-warning
-            td.location
-              a(href="#") Test 1
-            td.ip -
-            td.min -
-            td.max -
-            td.avg -
-            td.loss -
-            td.traceLink
-              a(href="#") Traceroute
-          tr#test182763
-            td.pulsar
-              span.glyphicon.glyphicon-link.text-warning
-            td.location
-              a(href="#") Test 2
-            td.ip -
-            td.min -
-            td.max -
-            td.avg -
-            td.loss -
-            td.traceLink
-              a(href="#") Traceroute
+            td.options
