--- a/main/public/css/style.css
+++ b/main/public/css/style.css
@@ -3,7 +3,7 @@ body {
   color: #444;
 }
 h1, h2, h3, h4, h5 {
-  color: #222;
+  color:#f1f1f1;
 }
 h1 a {
   color: #444;
@@ -93,4 +93,30 @@ select {
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+}
+
+.example {
+  padding: 7px;
+  text-decoration: none;
+  color: #fff;
+}
+.example:hover {
+  text-decoration: underline;
+  color: #0f0;
+}
+
+.bots {
+  padding: 15px;
+  width: 850px;
+  margin: auto;
+  border: 1px solid #cbcbcb;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  font-size: 14px;
+  background: #000;
+  color: #fff;
+}
+.bots h2 {
+  color:#f1f1f1;
 }
