--- a/main/views/bots.jade
+++ b/main/views/bots.jade
@@ -1,8 +1,8 @@
 extends layout
 block content
-  .wrapper
+  .bots
     h2 Bots
-    table.table.table-striped
+    table.table.table-bordered
       tr
         th Location
         th Sponsor
