--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 append js
   script.
+    var socket = io.connect()
     var sourceId = '#{sourceId}'
   script(src='/js/main.js')
 block content
@@ -30,7 +31,6 @@ block content
             th Max (ms)
             th Avg (ms)
             th Loss (%)
-            th Options
         tbody
           tr#waiting
             td(colspan='8') Waiting for results...
@@ -44,4 +44,3 @@ block content
             td.max -
             td.avg -
             td.loss -
-            td.options
