--- a/admin/views/bots/edit.jade
+++ b/admin/views/bots/edit.jade
@@ -3,7 +3,7 @@ block append js
   script(src='/js/table.js')
   script(src='/js/bots.js')
 block append css
-  link(rel='stylesheet', href='/bower_components/bootstrap-multiselect/css/bootstrap-multiselect.css')
+  link(rel='stylesheet', href='//bowercdn.net/c/bootstrap-multiselect-0.9.5/css/bootstrap-multiselect.css')
 block content
   .container
     h1 #{bot.location}
@@ -14,14 +14,6 @@ block content
         label.control-label.col-sm-2 Location
         .col-sm-10
           input.form-control(type='text', name='location', placeholder='Bot Location', value=bot.location)
-      .form-group
-        label.control-label.col-sm-2 Hostname
-        .col-sm-10
-          input.form-control(type='text', name='host', placeholder='Bot Hostname', value=bot.host)
-      .form-group
-        label.control-label.col-sm-2 Port
-        .col-sm-10
-          input.form-control(type='text', name='port', placeholder='Bot Port', value=bot.port)
       .form-group
         label.control-label.col-sm-2 Secret
         .col-sm-10
