--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -5,7 +5,13 @@ html
     block meta
       meta(charset='utf-8')
       meta(name='author', content='Ping.ms')
+      meta(property='og:type', content='website')
+      meta(property='og:url', content='http://ping.ms/')
       meta(property='og:site_name', content='Ping.ms')
+      meta(property='og:title', content='#{pageTitle || "Ping.ms"}')
+      meta(property='og:description', content='ping.ms offers free online ping and free online traceroute service with multiple locations worldwide.')
+      meta(property='og:image', content='http://ping.ms/images/pingms-icon.png')
+      meta(property='fb:app_id', content='1503375086562896')
       meta(name='keywords', content='ping test, ping, traceroute, reverse traceroute, online ping, remote ping, server, web site, website speed, network speed, traceroutes, ping website')
       meta(name='description', content='ping.ms offers free online ping and free online traceroute service with multiple locations worldwide.')
     title #{pageTitle || 'Ping.ms'}
@@ -26,13 +32,24 @@ html
             img#logo(src='/images/pingms-logo.png', alt='Ping.ms')
     //main content
     block content
-      //footer
+    //footer
     #footer
       .pull-right
+        //facebook
+        #fb-root
+        script.
+          ;(function(d,s,id){
+            if (d.getElementById(id)) return
+            var js = d.createElement(s), fjs = d.getElementsByTagName(s)[0]
+            js.defer=true; js.async=true; js.id = id
+            js.src = '//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1503375086562896&version=v2.0'
+            fjs.parentNode.insertBefore(js,fjs)
+          }(document,'script','facebook-jssdk'))
+        .fb-like(data-layout='button_count', colorscheme='dark', data-action='like', data-show-faces='false', data-share='true')
         //whos.amung.us
         script(id='_wau5ni').
           var _wau = _wau || []; _wau.push(["small", "wmkiodnoh3et", "5ni"]);
-          (function() {var s=document.createElement("script"); s.async=true;
+          (function() {var s=document.createElement("script"); s.defer=true; s.async=true;
           s.src="http://widgets.amung.us/small.js";
           document.getElementsByTagName("head")[0].appendChild(s);
           })();
@@ -63,7 +80,7 @@ html
       script.
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        m=s.getElementsByTagName(o)[0];a.defer=true;a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
               ga('create', 'UA-52059391-1', 'ping.ms');
         ga('send', 'pageview');
