--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -25,6 +25,14 @@ html
     link(rel='icon', href='/favicon128.ico', sizes='128x128')
     link(rel='icon', href='/images/pingms-icon.png', sizes='318x317', type='image/png')
   body
+    script.
+      var scriptLoader = function(id,src){
+        if(document.getElementById(id)) return
+        var js = document.createElement('script')
+        js.id = id; js.src = src; js.defer=true; js.async=true; js.type='text/javascript'
+        var fjs = document.getElementsByTagName('script')[0]
+        fjs.parentNode.insertBefore(js,fjs)
+      }
     #header
       #title
         h1
@@ -34,26 +42,23 @@ html
     block content
     //footer
     #footer
-      .pull-right
+      .share
         //facebook
         #fb-root
         script.
-          ;(function(d,s,id){
-            if (d.getElementById(id)) return
-            var js = d.createElement(s), fjs = d.getElementsByTagName(s)[0]
-            js.defer=true; js.async=true; js.id = id
-            js.src = '//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1503375086562896&version=v2.0'
-            fjs.parentNode.insertBefore(js,fjs)
-          }(document,'script','facebook-jssdk'))
+          scriptLoader('facebook-jssdk','//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1503375086562896&version=v2.0')
         .fb-like(data-layout='button_count', colorscheme='dark', data-action='like', data-show-faces='false', data-share='true')
+        //end facebook
+        //twitter
+        a.twitter-share-button(href='//twitter.com/share', data-lang='en') Tweet
+        script.
+          scriptLoader('twitter-wjs','//platform.twitter.com/widgets.js')
+        //end twitter
         //whos.amung.us
         script(id='_wau5ni').
           var _wau = _wau || []; _wau.push(["small", "wmkiodnoh3et", "5ni"]);
-          (function() {var s=document.createElement("script"); s.defer=true; s.async=true;
-          s.src="http://widgets.amung.us/small.js";
-          document.getElementsByTagName("head")[0].appendChild(s);
-          })();
-      //end whos.amung.us
+          scriptLoader('wauScript','//widgets.amung.us/small.js')
+        //end whos.amung.us
       .links
         a(href='/bots') Bot List
         //a(href='http://en.wikipedia.org/wiki/Ping_(networking_utility)') What is Ping?
@@ -65,16 +70,12 @@ html
       script(src='/socket.io/socket.io.js')
       //piwik
       script.
-        var _paq = _paq || [];
-        _paq.push(['trackPageView']);
-        _paq.push(['enableLinkTracking']);
-        (function() {
-          var u=(("https:" == document.location.protocol) ? "https" : "http") + "://stats.esited.com/";
-          _paq.push(['setTrackerUrl', u+'piwik.php']);
-          _paq.push(['setSiteId', 2]);
-          var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-          g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-        })();
+        var _paq = _paq || []
+        _paq.push(['trackPageView'])
+        _paq.push(['enableLinkTracking'])
+        _paq.push(['setTrackerUrl', (('https:' === document.location.protocol) ? 'https' : 'http') + '://stats.esited.com/piwik.php'])
+        _paq.push(['setSiteId', 2])
+        scriptLoader('paqScript','//stats.esited.com/piwik.js')
       //end piwik
       //google analytics
       script.
