--- a/main/views/bots.jade
+++ b/main/views/bots.jade
@@ -6,14 +6,14 @@ block content
       tr
         th Location
         th Sponsor
-        th Active
+        th Hits
         th Seen
       each row in bots
         tr
           td= row.location
           td
-            a(href=row.sponsor.url)=row.sponsor.name
-          td= row.active ? 'Yes' : 'No'
+            a(href=row.sponsor.url)= row.sponsor.name
+          td= row.hits
           td(style='white-space:nowrap;')
             if row.metrics.dateSeen
               = moment(row.metrics.dateSeen).fromNow()
