--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -61,6 +61,7 @@ html
         //end whos.amung.us
       .links
         a(href='/bots') Bot List
+        a(href='/news') News
         //a(href='http://en.wikipedia.org/wiki/Ping_(networking_utility)') What is Ping?
         //a(href='http://en.wikipedia.org/wiki/Traceroute') What is Traceroute?
     //load scripts
