Use bootstrap3 .text-right class instead of the .right I created previously.

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -28,10 +28,10 @@ block content
               span.glyphicon.glyphicon-link
             th Location
             th IP
-            th.right Min (ms)
-            th.right Max (ms)
-            th.right Avg (ms)
-            th.right Loss (%)
+            th.text-right Min (ms)
+            th.text-right Max (ms)
+            th.text-right Avg (ms)
+            th.text-right Loss (%)
         tbody
           tr#waiting
             td(colspan='8') Waiting for results...
@@ -41,7 +41,7 @@ block content
             td.location
               a(href="#") -
             td.ip -
-            td.min.right -
-            td.max.right -
-            td.avg.right -
-            td.loss.right -
+            td.min.text-right -
+            td.max.text-right -
+            td.avg.text-right -
+            td.loss.text-right -
