Fixes #22; Fixes #25; Repair DNS and add filtering for "bogus NX domains". Also clean up some layout in general.

--- a/main/views/bots.jade
+++ b/main/views/bots.jade
@@ -10,7 +10,11 @@ block content
         th Seen
       each row in bots
         tr
-          td= row.location
+          td
+            if(row.primaryGroup)
+              span.label.label-default= row.primaryGroup
+              =' '
+            span= row.location
           td
             a(href=row.sponsor.url)= row.sponsor.name
           td= row.hits
