--- a/main/public/css/style.css
+++ b/main/public/css/style.css
@@ -121,6 +121,18 @@ select {
 .results table {
   margin-bottom: 0;
 }
+.results table td.group {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  vertical-align: middle;
+  border-right: 0;
+}
+.results table td.location {
+  margin-left: 0;
+  padding-left: 0;
+  border-left: 0;
+}
 
 .bots h2 {
   margin-top: 0;
