--- a/main/public/css/style.css
+++ b/main/public/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'Terminus';
+  src: url('../fonts/Terminus.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Terminus.woff') format('woff'),
+  url('../fonts/Terminus.ttf')  format('truetype'),
+  url('../fonts/Terminus.svg#svgFontName') format('svg');
+}
+.terminus {
+  font-family: 'Terminus','Courier New','monospace';
+  font-size: 12pt;
+}
+
 body {
   background-color: #000;
   color: #444;
@@ -124,13 +136,12 @@ select {
 .results table td.group {
   margin: 0;
   padding: 0;
-  text-align: center;
   vertical-align: middle;
   border-right: 0;
 }
 .results table td.location {
   margin-left: 0;
-  padding-left: 0;
+  padding-left: 8px;
   border-left: 0;
 }
 
