--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -40,12 +40,12 @@ block content
             th.text-right Loss (%)
         tbody
           tr#waiting
-            td(colspan='8') Waiting for results...
+            td.terminus(colspan='8') Waiting for results...
           tr.hidden#ping-row-template
             td.pulsar
               span.glyphicon.glyphicon-link.text-warning
             td.group.text-right
-              span.label.label-default.hidden#primaryGroupLabel
+              span.label.label-success.hidden#primaryGroupLabel
             td.location
               a(href="javascript:false")
                 span.terminus#text
