--- a/admin/views/page/list.jade
+++ b/admin/views/page/list.jade
@@ -26,4 +26,13 @@ block content
             td= new Date(row.metrics.dateModified).toDateString()
             td
               span.glyphicon.glyphicon-align-center(class='glyphicon-'+(row.active?'ok-circle text-success':'ban-circle text-danger'))
-      +tableFooter(page,count)
+      div
+        .pull-right.btn-group
+          a.btn.btn-default(href='/page?start=#{page.previous}&search=#{search}') Previous
+          a.btn.btn-default(href='/page?start=#{page.next}&search=#{search}') Next
+        span #{page.start + 1} - #{page.end} of #{count} entries
+        h4.text-danger Destructive
+        div
+          button.btn.btn-danger#tableDelete(name='delete', value='true', type='submit')
+            span.glyphicon.glyphicon-remove
+            | Delete Checked
