--- a/admin/views/group/list.jade
+++ b/admin/views/group/list.jade
@@ -3,7 +3,7 @@ block append js
   script(src='/js/table.js')
 block content
   .container
-    +tableHeader('Groups','/group/create','Create Group')
+    +tableHeader('Groups','/group/create','Create Group',[10,25,50,100,200,500])
     +alerts()
     form(method='post', role='form')
       table.table.table-striped
