--- a/admin/views/peer/list.jade
+++ b/admin/views/peer/list.jade
@@ -3,7 +3,7 @@ block append js
   script(src='/js/table.js')
 block content
   .container
-    +tableHeader('Peers','/peer/create','Create Peer')
+    +tableHeader('Peers','/peer/create','Create Peer',[10,25,50,100,200,500])
     +alerts()
     form(method='post', role='form')
       table.table.table-bordered
