--- a/admin/views/table.jade
+++ b/admin/views/table.jade
@@ -1,10 +1,12 @@
-mixin tableHeader(title,createUrl,createLabel)
+mixin tableHeader(title,createUrl,createLabel,pagingLevels)
+  if !pagingLevels
+    pagingLevels = [10,20,50,100,200,500]
   div
     .pull-right
       form.form-inline#tableSearch(role='form', action='', method='get')
         .form-group
           select.form-control#tableLimit(name='limit')
-            each i in [10,20,50,100,200,500]
+            each i in pagingLevels
               option(selected=i == limit)=i
         .form-group
           input.form-control(type='text', name='search', placeholder='Filter Results', value=search)
