remove parallel from default

--- a/admin/views/peer/list.jade
+++ b/admin/views/peer/list.jade
@@ -106,7 +106,7 @@ block content
           button.btn.btn-success(name='runCommand', value='true', type='submit')
             span.glyphicon.glyphicon-flash
             | Run
-          input(type='checkbox', name='runCommandParallel', value='true', checked=true)
+          input(type='checkbox', name='runCommandParallel', value='true', checked=false)
           small  Run Command in Parallel
         h4.text-danger Destructive
         div
